--- a/etiquetas_kotlin/app/src/main/res/layout/activity_login.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/backgr"
     android:gravity="center_vertical"
+    android:onClick="registro"
     android:orientation="vertical"
     android:visibility="visible"
     tools:context=".LoginActivity">
@@ -52,23 +53,33 @@
         android:text="@string/ForgotPassword"
         android:textColor="@color/black" />
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:fontFamily="sans-serif-black"
+        android:layout_weight="0"
         android:gravity="center"
-        android:onClick="registro"
-        android:text="@string/Register"
-        android:textColor="@color/black" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btn_Login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@color/design_default_color_primary"
-        android:onClick="login"
-        android:text="@string/btn_login"
-        android:textColor="@android:color/white" />
+        <Button
+            android:id="@+id/btn_Login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@color/design_default_color_primary"
+            android:onClick="login"
+            android:text="@string/btn_login"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/btn_Register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@color/tag_green"
+            android:onClick="login"
+            android:text="@string/btn_register"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
+
 </LinearLayout>
