--- a/etiquetas_kotlin/app/src/main/res/layout/activity_registrar2.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_registrar2.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgr"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".RegistrarActivity">
 
@@ -54,8 +55,9 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:background="@color/design_default_color_primary"
         android:onClick="registro"
         android:text="@string/btn_createAccount"
